--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
