--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
 }
