--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "12.2.3",
     "nextjs-cors": "^2.1.1",
+    "prisma": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
