--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "jest": "^28.1.3",
+    "ts-jest": "^28.0.7",
     "typescript": "4.7.4"
   }
 }
